# otsdaq_mu2e_crv

./: .gitignore  CMakeLists.txt  create_subsystem_sw.sh
.github/workflows/: git-whitespace.yml  mu2e-build-single-pkg.yml  mu2e-develop-cpp-ci.yml  mu2e-format-single-pkg.yml  mu2e-test-single-pkg.yml  mu2e-tidy-single-pkg.yml
Data/ConfigurationInfo/: ARTDAQAggregatorConfigurationInfo.xml  ARTDAQAggregatorDaqConfigurationInfo.xml  ARTDAQAggregatorDaqParameterConfigurationInfo.xml  ARTDAQAggregatorServicesConfigurationInfo.xml  ARTDAQAggregatorSourceConfigurationInfo.xml  ARTDAQBoardReaderConfigurationInfo.xml  ARTDAQBoardReaderDaqParameterConfigurationInfo.xml  ARTDAQBuilderConfigurationInfo.xml  ARTDAQBuilderDaqConfigurationInfo.xml  ARTDAQBuilderDaqParameterConfigurationInfo.xml  ARTDAQBuilderServicesConfigurationInfo.xml  ARTDAQBuilderServicesDestinationConfigurationInfo.xml  ARTDAQBuilderSourceConfigurationInfo.xml  ARTDAQConsumerConfigurationInfo.xml  ARTDAQDaqDestinationConfigurationInfo.xml  ARTDAQDaqMetricConfigurationInfo.xml  ARTDAQDaqMetricParameterConfigurationInfo.xml  ARTDAQDaqSourceConfigurationInfo.xml  ARTDAQGlobalConfigurationInfo.xml  ARTDAQOutputConfigurationInfo.xml  ARTDAQOutputModuleParameterConfigurationInfo.xml  ARTDAQPhysicsAnalyzerConfigurationInfo.xml  ARTDAQPhysicsAnalyzerParameterConfigurationInfo.xml  ARTDAQPhysicsConfigurationInfo.xml  ARTDAQPhysicsFilterConfigurationInfo.xml  ARTDAQPhysicsFilterParameterConfigurationInfo.xml  ARTDAQPhysicsParameterConfigurationInfo.xml  ARTDAQPhysicsProducerConfigurationInfo.xml  (+23 more)
otsdaq-mu2e-crv/: CMakeLists.txt
test/: ots_udp_hw_emulator.cpp  ots_udp_sw_emulator.cpp  udp_data_emulator.cpp
tools/: CMakeLists.txt  reset_ots_tutorial.sh  run_clang_format.sh
ups/: product_deps
(+104 files in other folders)
